tests/throw/throw.exp
Error ---------------------------------------------------------------------------------------------------- test.js:13:12

Cannot use operator `*` with operands string [1] and number [2] [unsafe-arithmetic]

   test.js:13:12
   13|     return a*1; // a is not null
                  ^^^

References:
   test.js:9:16
    9| function g(a: ?string) {
                      ^^^^^^ [1]
   test.js:13:14
   13|     return a*1; // a is not null
                    ^ [2]



Found 1 error
